# pet_notif-rw

./: README.md  pyproject.toml
src/: main.py
src/notifrw/: main.py
tests/: test_main.py
